--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "lucide-react": "^0.487.0",
         "motion": "*",
         "next-themes": "^0.4.6",
-        "npm:hono": "*",
+        "hono": "*",
           "react": "^18.3.1",
           "react-day-picker": "^8.10.1",
           "react-dom": "^18.3.1",
